map works w localhost' ;

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
         <title>Lab 9</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
         <link rel="stylesheet" href="static/main.css" />
+        
+          <!-- leaflet libraries -->
+    	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+   		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
         <script src="static/main.js"></script>
     </head>
     <body>
         <header>
-            <h1>Welcome to lab 9!</h1>
-            <h3>These can be completed in any order. If you can't complete one, skip it.</h3>
-            <h3>Submit a text document containing your name and the codes returned. (One code per line)</h3>
+            <h1>Final Project Group 2</h1>
         </header>
         <div class="login-inputs">
           <p>Login #1: (Login as admin)</p>
@@ -21,6 +24,7 @@
           <button id="login1">Login</button>
           <span id="result1"></span>
         </div>
+        <div id="map"></div>
         <div class="login-inputs">
           <p>Login #2: (Login as admin)</p>
           <span>Username: <input type="text" id="username2"/></span>
