--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
             <h1>Final Project Group 2</h1>
         </header>
         <div class="login-inputs">
-          <p>Login #1: (Login as admin)</p>
-          <span>Username: <input type="text" id="username1"/></span>
-          <span>Password: <input type="text" id="password1"/></span>
+          <p>make a donation as a previous donor</p>
+          <span>email: <input type="text" id="password1"/></span>
+          <span>Donation amount: <input type="text" id="username1"/></span>
+          <span>Payment method: <input type="text" id="password1"/></span>
           <button id="login1">Login</button>
           <span id="result1"></span>
         </div>
         <div id="map"></div>
         <div class="login-inputs">
-          <p>Login #2: (Login as admin)</p>
-          <span>Username: <input type="text" id="username2"/></span>
-          <span>Password: <input type="text" id="password2"/></span>
+          <p>Make a donation as a new donor</p>
+          <span>First Name: <input type="text" id="username2"/></span>
+          <span>Last Name: <input type="text" id="password2"/></span>
+          <span>Phone: <input type="text" id="password2"/></span>
+          <span>Email: <input type="text" id="password2"/></span>
+          <span>Address Line 1: <input type="text" id="password2"/></span>
+          <span>Line 2: <input type="text" id="password2"/></span>
+          <span>City: <input type="text" id="password2"/></span>
+          <span>State Code: <input type="text" id="password2"/></span>
+          <span>Donation amount: <input type="text" id="password2"/></span>
+          <span>Payment type: <input type="text" id="password2"/></span>
           <button id="login2">Login</button>
           <span id="result2"></span>
         </div>
