updated JS and HTML to support writes

--- a/html/index.html
+++ b/html/index.html
@@ -35,15 +35,15 @@
         </header>
         <div class="login-inputs col-md-5">
           <p>make a donation as a previous donor</p>
-          <span>email: <input type="text" id="password1"/></span>
-          <span>Donation amount: <input type="text" id="username1"/></span>
-          <span>Payment method: <input type="text" id="password1"/></span>
+          <span>email: <input type="text" id="email-old"/></span>
+          <span>Donation amount: <input type="text" id="amount-old"/></span>
+          <span>Payment method: <input type="text" id="payment-id-old"/></span>
           <span>card</span>
           <input type="radio" value="1" name="prv">cash
           <input type="radio" value="2" name="prv">check
           <input type="radio" value="3" name="prv">
-          <span>Card number: <input type="text" id="password1"/></span>
-          <span>Expiration date: <input type="text" id="password1"/></span>
+          <span>Card number: <input type="text" id="card-num-old"/></span>
+          <span>Expiration date: <input type="text" id="exp-old"/></span>
           <button id="submit1">Submit</button>
           <span id="result1"></span>
         </div>
@@ -52,22 +52,22 @@
 
          <div  class="login-inputs col-md-5">
           <p>Make a donation as a new donor</p>
-          <span>First Name: <input type="text" id="username2"/></span>
-          <span>Last Name: <input type="text" id="password2"/></span>
-          <span>Phone: <input type="text" id="password2"/></span>
-          <span>Email: <input type="text" id="password2"/></span>
-          <span>Address Line 1: <input type="text" id="password2"/></span>
-          <span>Line 2: <input type="text" id="password2"/></span>
-          <span>City: <input type="text" id="password2"/></span>
-          <span>State Code: <input type="text" id="password2"/></span>
-          <span>Donation amount: <input type="text" id="password2"/></span>
-          <span>Payment method: </span></p>
+          <span>First Name: <input type="text" id="f_name"/></span>
+          <span>Last Name: <input type="text" id="l_name"/></span>
+          <span>Phone: <input type="text" id="phone"/></span>
+          <span>Email: <input type="text" id="email-new"/></span>
+          <span>Address Line 1: <input type="text" id="addr-line-1"/></span>
+          <span>Line 2: <input type="text" id="addr-line-2"/></span>
+          <span>City: <input type="text" id="city"/></span>
+          <span>State Code: <input type="text" id="state-code"/></span>
+          <span>Donation amount: <input type="text" id="amount-new"/></span>
+          <span>Payment method: <input type="text" id="payment-id-new"/></span></p>
           <span>card</span>
           <input type="radio" value="1" name="new">cash
           <input type="radio" value="2" name="new">check
           <input type="radio" value="3" name="new">
-          <span>Card number: <input type="text" id="password1"/></span>
-          <span>Expiration date: <input type="text" id="password1"/></span>
+          <span>Card number: <input type="text" id="card-num-new"/></span>
+          <span>Expiration date: <input type="text" id="exp-new"/></span>
           <button id="submit2">Submit</button>
           <span id="result2"></span>
         </div>
