--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
           <span>card</span>
           <input type="radio" value="1" name="prv">cash
           <input type="radio" value="2" name="prv">check
-          <input type="radio" value="3" name="prv">
+          <!--<input type="radio" value="3" name="prv"> -->
           <span>Card number: <input type="text" id="card-num-old"/></span>
           <span>Expiration date: <input type="text" id="exp-old"/></span>
           <button id="submit1">Submit</button>
@@ -65,7 +65,7 @@
           <span>card</span>
           <input type="radio" value="1" name="new">cash
           <input type="radio" value="2" name="new">check
-          <input type="radio" value="3" name="new">
+          <!--<input type="radio" value="3" name="new"> !-->
           <span>Card number: <input type="text" id="card-num-new"/></span>
           <span>Expiration date: <input type="text" id="exp-new"/></span>
           <button id="submit2">Submit</button>
