--- a/html/index.html
+++ b/html/index.html
@@ -54,8 +54,8 @@
           <span>State Code: <input type="text" id="state-code"/></span>
           <span>Donation amount: <input type="text" id="amount-new"/></span>
           <span>Payment method: <input type="text" id="payment-id-new"/></span></p>
-          <span>card</span>
-          <input type="radio" value="1" name="new">cash
+          <span>card
+          <input type="radio" value="1" name="new"></span>cash
           <input type="radio" value="2" name="new">
           <span>Card number (16 digits): <input type="text" id="card-num-new"/></span>
           <span>Expiration date (eg: "2016-01-01"): <input type="text" id="exp-new"/></span>
