--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
           <p>make a donation as a previous donor</p>
           <span>email: <input type="text" id="email-old"/></span>
           <span>Donation amount: <input type="text" id="amount-old"/></span>
-          <span>Payment method: <input type="text" id="payment-id-old"/></span>
+          <span>Payment method: </span>
           <span>card</span>
           <input type="radio" value="1" name="prv">cash
           <input type="radio" value="2" name="prv">
@@ -53,9 +53,8 @@
           <span>City: <input type="text" id="city"/></span>
           <span>State Code: <input type="text" id="state-code"/></span>
           <span>Donation amount: <input type="text" id="amount-new"/></span>
-          <span>Payment method: <input type="text" id="payment-id-new"/></span></p>
-          <span>card
-          <input type="radio" value="1" name="new"></span>cash
+          <span>Payment method: </span></p>
+          <span>card  <input type="radio" value="1" name="new"></span>cash
           <input type="radio" value="2" name="new">
           <span>Card number (16 digits): <input type="text" id="card-num-new"/></span>
           <span>Expiration date (eg: "2016-01-01"): <input type="text" id="exp-new"/></span>
