--- a/html/index.html
+++ b/html/index.html
@@ -30,10 +30,10 @@
           <p>make a donation as a previous donor</p>
           <span>email: <input type="text" id="email-old"/></span>
           <span>Donation amount: <input type="text" id="amount-old"/></span>
-          <span>Payment method: </span>
+          <span>Payment method:</span></br>
           <span>card</span>
           <input type="radio" value="1" name="prv">cash
-          <input type="radio" value="2" name="prv">
+          <input type="radio" value="2" name="prv"></br>
           <span>Card number (16 digits): <input type="text" id="card-num-old"/></span>
           <span>Expiration date: <input type="text" id="exp-old"/></span>
           <button id="submit1">Submit</button>
@@ -55,7 +55,7 @@
           <span>Donation amount: <input type="text" id="amount-new"/></span>
           <span>Payment method: </span></p>
           <span>card  <input type="radio" value="1" name="new"></span>cash
-          <input type="radio" value="2" name="new">
+          <input type="radio" value="2" name="new"></br>
           <span>Card number (16 digits): <input type="text" id="card-num-new"/></span>
           <span>Expiration date (eg: "2016-01-01"): <input type="text" id="exp-new"/></span>
           <button id="submit2">Submit</button>
