--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
             <h1>Final Project Group 2</h1>
         </header>
         <div class="login-inputs col-md-5">
-          <p>make a donation as a previous donor</p>
+          <p><b>Make a donation as a previous donor</b></p>
           <span>email: <input type="text" id="email-old"/></span>
           <span>Donation amount: <input type="text" id="amount-old"/></span>
           <span>Payment method:</span></br>
@@ -43,7 +43,7 @@
         <div id="map"></div>
 
          <div  class="login-inputs col-md-5">
-          <p>Make a donation as a new donor</p>
+          <p><b>Make a donation as a new donor</b></p>
           <span>First Name: <input type="text" id="f_name"/></span>
           <span>Last Name: <input type="text" id="l_name"/></span>
           <span>Phone (10 digits): <input type="text" id="phone"/></span>
