--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
         </header>
         <div class="login-inputs col-md-5">
           <p><b>Make a donation as a previous donor</b></p>
-          <span>email: <input type="text" id="email-old"/></span>
+          <span> (that you used when new donor): <input type="text" id="email-old"/></span>
           <span>Donation amount: <input type="text" id="amount-old"/></span>
           <span>Payment method:</span></br>
           <span>card</span>
